--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shakil Ansary</title>
+    <title>Md Nazrul Islam</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,16 +25,16 @@
     <section class="hero-setion">
       <div class="container hero__container">
         <h5>Hello I'm</h5>
-        <h1>Shakil Ansary</h1>
-        <h5>Front-End Developer</h5>
+        <h1>Md Nazrul Islam</h1>
+        <h5>Professional Graphic Designer</h5>
         <div class="hero-btn">
           <a class="outline-btn" href="#">Download CV</a>
-          <a class="solid-btn" href="#contact">Let's Talk</a>
+          <a class="solid-btn" href="#contact">Contact Me</a>
         </div>
         <div class="header__socials">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-github"></i></a>
+          <a href="https://facebook.com/iamnazrul2345"><i class="bi bi-facebook"></i></a>
+          <a href="https://instagram.com/iamnazrul2345"><i class="bi bi-instagram"></i></a>
+          <a href="https://github.com/iamnazrul2345"><i class="bi bi-github"></i></a>
         </div>
         <div class="row my__img-row">
           <div class="me">
@@ -130,33 +130,33 @@
         <div class="row">
           <div class="col-12 col-md-6 experience">
             <div class="about__card">
-              <h3>Frontend Development</h3>
+              <h3>Professional Graphic Design</h3>
               <div class="experience-box d-flex">
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>HTML</h4>
+                    <h4>Social Media Poster</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>CSS</h4>
+                    <h4>T-shirt Design</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Javascript</h4>
+                    <h4>Poster Design</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>ReactJS</h4>
+                    <h4>Documents Editing</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
@@ -184,14 +184,14 @@
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Adobe XD</h4>
+                    <h4>Adobe Pr</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Figma</h4>
+                    <h4>MS Office</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
