--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Shakil Ansary</h6>
+                <h6 class="mt-2">Md Nazrul Islam</h6>
                 <p class="text-center">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Quam, quo totam. Obcaecati molestiae cumque hic officiis
@@ -392,7 +392,7 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Shakil Ansary</h6>
+                <h6 class="mt-2">Md Nazrul Islam</h6>
                 <p class="text-center">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Quam, quo totam. Obcaecati molestiae cumque hic officiis
@@ -409,7 +409,7 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Shakil Ansary</h6>
+                <h6 class="mt-2">Md Nazrul Islam</h6>
                 <p class="text-center">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Quam, quo totam. Obcaecati molestiae cumque hic officiis
@@ -438,15 +438,15 @@
             >
               <i class="bi bi-envelope-check-fill"></i>
               <h6>Email</h6>
-              <p>shakil@foxflue.com</p>
-              <a href="mailto:shakil@foxflue.com">Send a message</a>
+              <p>iamnazrul2345@gmail.com</p>
+              <a href="mailto:iamnazrul2345@gmail.com">Send a message</a>
             </div>
             <div
               class="contact-card about__card mb-3 d-flex flex-column align-items-center justify-content-center"
             >
               <i class="bi bi-messenger"></i>
               <h6>Messenger</h6>
-              <p>dev.shakilansary</p>
+              <p>dev.mdnazrulislam</p>
               <a href="https://m.me/dev.shakilansary">Send a message</a>
             </div>
             <div
@@ -454,8 +454,8 @@
             >
               <i class="bi bi-whatsapp"></i>
               <h6>Whatsapp</h6>
-              <p>+91 9733000000</p>
-              <a href="https://wa.me/+919733000000">Send a message</a>
+              <p>+880 1772460597</p>
+              <a href="https://wa.me/+8801772460597">Send a message</a>
             </div>
           </div>
           <div class="col-12 col-md-7 col-lg-8">
@@ -507,11 +507,12 @@
     <!-- Footer  -->
     <section id="footer">
       <div class="d-flex flex-column align-items-center justify-content-center">
-        <h4>Shakil Ansary</h4>
+        <h4>Md Nazrul Islam</h4>
         <div class="footer-social">
           <i class="bi bi-facebook"></i>
           <i class="bi bi-instagram"></i>
-          <i class="bi bi-twitter"></i>
+          <i class="bi bi-x"></i>
+          <i class="bi bi-youtube"></i>
         </div>
       </div>
     </section>
