--- a/index.html
+++ b/index.html
@@ -511,8 +511,10 @@
         <div class="footer-social">
           <i class="bi bi-facebook"></i>
           <i class="bi bi-instagram"></i>
-          <i class="bi bi-x"></i>
+          <i class="bi bi-twitter"></i>
           <i class="bi bi-youtube"></i>
+          <i class="bi bi-whatsapp"></i>
+          <i class="bi bi-linkedin"></i>
         </div>
       </div>
     </section>
