--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       <div class="d-flex flex-column align-items-center justify-content-center">
         <h4>Md Nazrul Islam</h4>
         <div class="footer-social">
-          <i href="https://facebook.com/iamnazrul2345" class="bi bi-facebook"></i>
+          <i class="bi bi-facebook"></i>
           <i class="bi bi-instagram"></i>
           <i class="bi bi-twitter"></i>
           <i class="bi bi-youtube"></i>
