--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="aboutimage-div">
           <div class="about__me">
             <div class="about-img">
-              <img src="./assets/image/about-img.jpg" alt="" />
+              <img src="./assets/image/iamnazrul2345-p2.jpg" alt="" />
             </div>
           </div>
         </div>
