--- a/index.html
+++ b/index.html
@@ -130,33 +130,33 @@
         <div class="row">
           <div class="col-12 col-md-6 experience">
             <div class="about__card">
-              <h3>Professional Graphic Design</h3>
+              <h3>Graphic Design</h3>
               <div class="experience-box d-flex">
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Social Media Poster</h4>
+                    <h4>Poster</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>T-shirt Design</h4>
+                    <h4>T-shirt</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Poster Design</h4>
+                    <h4>Banner</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
                 <div class="experience-content d-flex">
                   <i class="bi bi-patch-check-fill"></i>
                   <div class="ms-3">
-                    <h4>Documents Editing</h4>
+                    <h4>Typeface</h4>
                     <small>Experienced</small>
                   </div>
                 </div>
