--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
             >
               <i class="bi bi-messenger"></i>
               <h6>Messenger</h6>
-              <p>dev.mdnazrulislam</p>
-              <a href="https://m.me/dev.shakilansary">Send a message</a>
+              <p>Md Nazrul Islam</p>
+              <a href="https://m.me/dev.iamnazrul2345">Send a message</a>
             </div>
             <div
               class="contact-card about__card mb-3 d-flex flex-column align-items-center justify-content-center"
