--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               <i class="bi bi-messenger"></i>
               <h6>Messenger</h6>
               <p>Md Nazrul Islam</p>
-              <a href="https://m.me/dev.iamnazrul2345">Send a message</a>
+              <a href="https://m.me/iamnazrul2345">Send a message</a>
             </div>
             <div
               class="contact-card about__card mb-3 d-flex flex-column align-items-center justify-content-center"
