--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Md Nazrul Islam</h1>
         <h5>Professional Graphic Designer</h5>
         <div class="hero-btn">
-          <a class="outline-btn" href="https://drive.google.com/uc?export=download&id=13P1ZGOBFCVTSJR21KG_bq_cUsQXe0msp">Download CV</a>
+          <a class="outline-btn" href="https://drive.google.com/uc?export=download&amp;id=13P1ZGOBFCVTSJR21KG_bq_cUsQXe0msp">Download CV</a>
           <a class="solid-btn" href="#contact">Contact Me</a>
         </div>
         <div class="header__socials">
