--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
             </article>
           </div>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis odio
-            dolore, sint eum sed illum quibusdam reiciendis excepturi in? Est
-            saepe numquam nostrum perferendis dolorum aperiam sed laudantium a,
-            voluptate laborum, voluptatibus omnis sint fugit labore consequatur
-            eaque, maiores molestias.
+            I am Md. Nazrul Islam, a professional graphic designer. I have also worked in various institutions and shops. I am an expert in computers. I always try to provide the best service for my clients. If you select me for your work, I hope you will be very happy.
           </p>
           <div class="about-btn">
             <a class="solid-btn mob-solid-btn" href="#contact">Let's Talk</a>
