--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </article>
           </div>
           <p>
-            I am Md Nazrul Islam, a professional Graphic Designer. I have also worked in various institutions and shops. I am an expert in computers. I always try to provide the best service for my clients. If you select me for your work, I hope you will be very happy.
+          I am Nazrul, a professional graphic designer. I have also worked in various institutions and shops. I am an expert in computers. I always try to provide the best service for my clients. If you select me for your work, I hope you will be greatly benefited.
           </p>
           <div class="about-btn">
             <a class="solid-btn mob-solid-btn" href="#contact">Let's Talk</a>
