--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             <article class="about__card">
               <i class="bi bi-people"></i>
               <h4>Clients</h4>
-              <small>50+ Worldwide</small>
+              <small>150+ Worldwide</small>
             </article>
             <article class="about__card">
               <i class="bi bi-braces"></i>
               <h4>Projects</h4>
-              <small>80+ Completed</small>
+              <small>100+ Completed</small>
             </article>
           </div>
           <p>
@@ -210,7 +210,7 @@
               <div
                 class="card-head text-center position-absolute top-0 start-0 d-flex justify-content-center align-items-center"
               >
-                UI/UX Design
+                Graphic Design
               </div>
               <ul>
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
@@ -226,7 +226,7 @@
               <div
                 class="card-head text-center position-absolute top-0 start-0 d-flex justify-content-center align-items-center"
               >
-                UI/UX Design
+                Documents Editing
               </div>
               <ul>
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
@@ -234,9 +234,7 @@
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
+                
               </ul>
             </div>
           </div>
@@ -245,7 +243,7 @@
               <div
                 class="card-head text-center position-absolute top-0 start-0 d-flex justify-content-center align-items-center"
               >
-                UI/UX Design
+                Internet Browsing
               </div>
               <ul>
                 <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
