--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
                 <img src="./assets/image/portfolio/pimg-01.jpg" alt="" />
               </div>
               <p class="text-start text-white">
-                3 Component Card Section - ReactJS
+                Nazrul Pixel Bangla Font - FontBD
               </p>
               <div class="hero-btn portfolio-btn">
-                <a class="outline-btn" href="#">Github</a>
+                <a class="outline-btn" href="#">Download</a>
                 <a class="solid-btn" href="#">Preview</a>
               </div>
             </div>
@@ -285,10 +285,10 @@
                 <img src="./assets/image/portfolio/pimg-02.jpg" alt="" />
               </div>
               <p class="text-start text-white">
-                3 Component Card Section - ReactJS
+                Nazrul Sourav Bangla Font - Lipighor
               </p>
               <div class="hero-btn portfolio-btn">
-                <a class="outline-btn" href="#">Github</a>
+                <a class="outline-btn" href="#">Buy</a>
                 <a class="solid-btn" href="#">Preview</a>
               </div>
             </div>
