--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 Nazrul Sourav Bangla Font - Lipighor
               </p>
               <div class="hero-btn portfolio-btn">
-                <a class="outline-btn" href="#">Buy only ৳20</a>
+                <a class="outline-btn" href="#">Buy 20Tk</a>
                 <a class="solid-btn" href="#">Preview</a>
               </div>
             </div>
