--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                 Nazrul Pixel Bangla Font - FontBD
               </p>
               <div class="hero-btn portfolio-btn">
-                <a class="outline-btn" href="#">Download</a>
-                <a class="solid-btn" href="#">Preview</a>
+                <a class="outline-btn" href="https://fontbd.com/download-font?cp-font-id=1872">Download</a>
+                <a class="solid-btn" href="https://fontbd.com/free-font/nazrul-pixel/">Preview</a>
               </div>
             </div>
           </div>
@@ -288,8 +288,8 @@
                 Nazrul Sourav Bangla Font - Lipighor
               </p>
               <div class="hero-btn portfolio-btn">
-                <a class="outline-btn" href="#">Buy 20Tk</a>
-                <a class="solid-btn" href="#">Preview</a>
+                <a class="outline-btn" href="https://lipighor.com/ecommerce/fontTransaction/checkout/?pid=LOFNSRV21&bid=1">Buy 20Tk</a>
+                <a class="solid-btn" href="https://lipighor.com/NazrulSourav.html">Preview</a>
               </div>
             </div>
           </div>
