--- a/index.html
+++ b/index.html
@@ -499,19 +499,35 @@
     <!-- Contact End -->
 
     <!-- Footer  -->
-    <section id="footer">
-      <div class="d-flex flex-column align-items-center justify-content-center">
-        <h4>Md Nazrul Islam</h4>
-        <div class="footer-social">
-          <i class="bi bi-facebook"></i>
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-twitter"></i>
-          <i class="bi bi-youtube"></i>
-          <i class="bi bi-whatsapp"></i>
-          <i class="bi bi-linkedin"></i>
+    <!-- Site footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">I am Nazrul, a professional graphic designer. I have also worked in various institutions and shops. I am an expert in computers. I always try to provide the best service for my clients. If you select me for your work, I hope you will be greatly benefited.</p>
+          </div>
+        <hr>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
+         <a href="#">Scanfcode</a>.
+            </p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+            </ul>
+          </div>
         </div>
       </div>
-    </section>
+</footer>
     <!-- Footer End -->
 
     <script
