--- a/index.html
+++ b/index.html
@@ -499,7 +499,19 @@
     <!-- Contact End -->
 
     <!-- Footer  -->
-    
+    <section id="footer">
+<div class="d-flex flex-column align-items-center justify-content-center">
+<h4>Md Nazrul Islam</h4>
+<div class="footer-social">
+  <i class="bi bi-facebook"></i>
+  <i class="pi bi-instagram"></i>
+  <i class="bi bi-twitter"></i>
+  <i class="bi bi youtube"></i>
+  <i class="bi bi-whatsapp"></i>
+  <i class="bi bi-linkedin"></i>
+</div>
+</div>
+    </section>
     <!-- Footer End -->
 
     <script
