--- a/index.html
+++ b/index.html
@@ -504,8 +504,9 @@
 <h4>Md Nazrul Islam</h4>
 <div class="footer-social">
   <i class="bi bi-facebook"></i>
-  <i class="pi bi-instagram"></i>
+  <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
+  <a class="facebook" href="#"><i class="bi bi-facebook"></i></a>
 </div>
 </div>
     </section>
