--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
   <i class="bi bi-facebook"></i>
   <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
-  <a class="facebook" href="#"><i class="bi bi-facebook"></i></a>
+  <a href="#"><i class="bi bi-facebook"></i></a>
 </div>
 </div>
     </section>
