--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@
   <i class="bi bi-facebook"></i>
   <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
-  <a href="#"><i class="bi bi-facebook"></i></a>
+  <i class="bi bi-facebook"><a href="#"></a></i>
+  <i class="bi bi-whatsapp"></i>
 </div>
 </div>
     </section>
