--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
   <i class="bi bi-facebook"></i>
   <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
-  <i class="bi bi-facebook"><a href="#"></a></i>
+  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
   <i class="bi bi-whatsapp"></i>
 </div>
 </div>
