--- a/index.html
+++ b/index.html
@@ -502,11 +502,12 @@
     <section id="footer">
 <div class="d-flex flex-column align-items-center justify-content-center">
 <h4>Md Nazrul Islam</h4>
+  <hr>
 <div class="footer-social">
   <i class="bi bi-facebook"></i>
   <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
-  <a class="facebook" href="#"><i class="bi bi-facebook"></i></a>
+  <i class="bi bi-linkedin"></i>
   <i class="bi bi-whatsapp"></i>
 </div>
 </div>
