--- a/index.html
+++ b/index.html
@@ -502,12 +502,12 @@
     <section id="footer">
 <div class="d-flex flex-column align-items-center justify-content-center">
 <h4>Md Nazrul Islam</h4>
-  <hr>
 <div class="footer-social">
   <i class="bi bi-facebook"></i>
   <i class="bi bi-instagram"></i>
   <i class="bi bi-twitter"></i>
   <i class="bi bi-linkedin"></i>
+  <a href="https://facebook.com">< i class"bi bi-github"></i></a>
   <i class="bi bi-whatsapp"></i>
 </div>
 </div>
