--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
                 Graphic Design
               </div>
               <ul>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
+                <li><i class="bi bi-check2-circle"></i>Social Media Poster Design.</li>
+                <li><i class="bi bi-check2-circle"></i>Business Card & Letter Head Design.</li>
+                <li><i class="bi bi-check2-circle"></i>Best Logo & Typography Design.</li>
+                <li><i class="bi bi-check2-circle"></i>Banner & Election Poster Design.</li>
+                <li><i class="bi bi-check2-circle"></i>T-shirt & Mockup Design.</li>
               </ul>
             </div>
           </div>
@@ -229,11 +229,11 @@
                 Documents Editing
               </div>
               <ul>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
+                <li><i class="bi bi-check2-circle"></i>File Editing & Correction.</li>
+                <li><i class="bi bi-check2-circle"></i>Pdf & Other File Editing.</li>
+                <li><i class="bi bi-check2-circle"></i>Bill Paper & Other File Editing.</li>
+                <li><i class="bi bi-check2-circle"></i>Typeface & Typography Design.</li>
+                <li><i class="bi bi-check2-circle"></i>Certificate & Crest Design.</li>
                 
               </ul>
             </div>
@@ -246,11 +246,11 @@
                 Internet Browsing
               </div>
               <ul>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
-                <li><i class="bi bi-check2-circle"></i>Lorem, ipsum dolor.</li>
+                <li><i class="bi bi-check2-circle"></i>Any Type of Online Application.</li>
+                <li><i class="bi bi-check2-circle"></i>Any Type of Result Checking.</li>
+                <li><i class="bi bi-check2-circle"></i>Birth Certificate & NID Application.</li>
+                <li><i class="bi bi-check2-circle"></i>Govt. & Private Job Application.</li>
+                <li><i class="bi bi-check2-circle"></i>School & College Application.</li>
               </ul>
             </div>
           </div>
