--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <img src="./assets/image/Nazrul_Sourav_Bangla_Font_Hover.jpg" alt="" />
               </div>
               <p class="text-start text-white">
-                Nazrul Sourav Bangla Font || নজরুল সৌরভ || Lipighor
+                Nazrul Sourav Bangla Font || নজরুল সৌরভ বাংলা ফন্ট || Lipighor
               </p>
               <div class="hero-btn portfolio-btn">
                 <a class="outline-btn" href="https://lipighor.com/ecommerce/fontTransaction/checkout/?pid=LOFNSRV21&bid=1">Buy 20Tk</a>
@@ -369,13 +369,9 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Md Nazrul Islam</h6>
+                <h6 class="mt-2">Md Sha-Zaman</h6>
                 <p class="text-center">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quam, quo totam. Obcaecati molestiae cumque hic officiis
-                  dolore ducimus quam possimus provident, architecto eaque saepe
-                  rerum nihil eius corporis ad nulla nemo ratione quas sint
-                  eligendi quidem. Aperiam, animi. Adipisci, ipsa!
+                  Nazrul took time to understand the requirements and finished before the deadline set. His task was to create a multi- lingual landing page with automatic language change based on location, and he did it successfully in a timely manner.<br>---
                 </p>
               </div>
             </div>
@@ -386,13 +382,9 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Md Nazrul Islam</h6>
+                <h6 class="mt-2">Jafor Islam Zihad</h6>
                 <p class="text-center">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quam, quo totam. Obcaecati molestiae cumque hic officiis
-                  dolore ducimus quam possimus provident, architecto eaque saepe
-                  rerum nihil eius corporis ad nulla nemo ratione quas sint
-                  eligendi quidem. Aperiam, animi. Adipisci, ipsa!
+                  Nazrul understands the requirements quite well, and implementation is praiseworthy .. He puts in his mind and gives real good practical suggestions. Would surely work on more projects with him in future.. Recommend that one should try out his work.. I believe you would like his work.<br>---
                 </p>
               </div>
             </div>
@@ -403,13 +395,9 @@
                 <div class="avtar">
                   <img src="./assets/image/about-img.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Md Nazrul Islam</h6>
+                <h6 class="mt-2">Md Nadim Mahmud</h6>
                 <p class="text-center">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quam, quo totam. Obcaecati molestiae cumque hic officiis
-                  dolore ducimus quam possimus provident, architecto eaque saepe
-                  rerum nihil eius corporis ad nulla nemo ratione quas sint
-                  eligendi quidem. Aperiam, animi. Adipisci, ipsa!
+                  I really like working with Nazrul. He has a lot of experience with WordPress, is friendly and doesn't stop working until you are completely satisfied with the result.<br>---
                 </p>
               </div>
             </div>
