--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <img src="./assets/image/Nazrul_Pixel_Bangla_Font_Hover.jpg" alt="" />
               </div>
               <p class="text-start text-white">
-                Nazrul Pixel Bangla Font || নজরুল পিক্সেল বাংলা ফন্ট || FontBD
+                Nazrul Pixel Free Bangla Font || নজরুল পিক্সেল ফ্রি বাংলা ফন্ট || FontBD
               </p>
               <div class="hero-btn portfolio-btn">
                 <a class="outline-btn" href="https://fontbd.com/download-font?cp-font-id=1872">Download</a>
@@ -285,7 +285,7 @@
                 <img src="./assets/image/Nazrul_Sourav_Bangla_Font_Hover.jpg" alt="" />
               </div>
               <p class="text-start text-white">
-                Nazrul Sourav Bangla Font || নজরুল সৌরভ বাংলা ফন্ট || Lipighor
+                Nazrul Sourav Premium Bangla Font || নজরুল সৌরভ প্রিমিয়াম বাংলা ফন্ট || Lipighor
               </p>
               <div class="hero-btn portfolio-btn">
                 <a class="outline-btn" href="https://lipighor.com/ecommerce/fontTransaction/checkout/?pid=LOFNSRV21&bid=1">Buy 20Tk</a>
