--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 class="testimonials d-flex flex-column align-items-center justify-content-center"
               >
                 <div class="avtar">
-                  <img src="./assets/image/about-img.jpg" alt="" />
+                  <img src="./assets/image/Md_Sha_Zaman.jpg" alt="" />
                 </div>
                 <h6 class="mt-2">Md Sha-Zaman</h6>
                 <p class="text-center">
@@ -380,9 +380,9 @@
                 class="testimonials d-flex flex-column align-items-center justify-content-center"
               >
                 <div class="avtar">
-                  <img src="./assets/image/about-img.jpg" alt="" />
+                  <img src="./assets/image/Zafor_Islam_Zihad.jpg" alt="" />
                 </div>
-                <h6 class="mt-2">Jafor Islam Zihad</h6>
+                <h6 class="mt-2">Zafor Islam Zihad</h6>
                 <p class="text-center">
                   Nazrul understands the requirements quite well, and implementation is praiseworthy .. He puts in his mind and gives real good practical suggestions. Would surely work on more projects with him in future.. Recommend that one should try out his work.. I believe you would like his work.<br>---
                 </p>
@@ -393,7 +393,7 @@
                 class="testimonials d-flex flex-column align-items-center justify-content-center"
               >
                 <div class="avtar">
-                  <img src="./assets/image/about-img.jpg" alt="" />
+                  <img src="./assets/image/Md_Nadim_Mahmud.jpg" alt="" />
                 </div>
                 <h6 class="mt-2">Md Nadim Mahmud</h6>
                 <p class="text-center">
